--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,14 @@
-db:
-  image: mysql:latest
-  environment:
-    MYSQL_ROOT_PASSWORD: nimda
-    MYSQL_DATABASE: example_db
-    MYSQL_USER: example_db_user
-    MYSQL_PASSWORD: example_db_pass
-#  ports:
-#    - "3306:3306"
-  volumes:
-   - ./db:/docker-entrypoint-initdb.d
-
-web:
-  image: tomcat:latest
-  # Environment variables do not appear to be getting loaded the first time Tomcat starts!
-  environment:
-    JDBC_URL: jdbc:mysql://db:3306/example_db?connectTimeout=0&amp;socketTimeout=0&amp;autoReconnect=true
-    JDBC_USER: example_db_user
-    JDBC_PASS: example_db_pass
-  ports:
-   - "8083:8080"
-  volumes:
-   - ./tomcat/webapps:/usr/local/tomcat/webapps
-  links:
-    - db
+version: '3.3'
+services:
+  jenkins:
+    image: jenkins/jenkins:lts
+    privileged: true
+    user: root
+    ports:
+      - 8081:8080
+      - 50000:50000
+    container_name: jenkins
+    volumes:
+      - ~/jenkins:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/local/bin/docker:/usr/local/bin/docker
